--- a/WebContent/firstStartCSS.css
+++ b/WebContent/firstStartCSS.css
@@ -49,7 +49,7 @@ i {
 
 /** control of tabs li size */
 .nav>li>a {
-	color: #45a049;
+	color: black;
 }
 
 .nav-tabs {
@@ -66,7 +66,7 @@ i {
 
 /**control of moving box*/
 .tab-content {
-	color: #45a049 !important;
+	color: black !important;
 }
 
 /* ~~~~~~~~~~~~~~~ Sign up CSS ~~~~~~~~~~~~~~~ */
@@ -122,6 +122,7 @@ input[type=text], input[type=password], input[type=email] {
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	box-sizing: border-box;
+	color: black;
 }
 
 input[type=submit] {
